--- a/Raj/Raj/Raj.csproj
+++ b/Raj/Raj/Raj.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CodeFile1.cs" />
+    <Compile Include="Indexer.cs" />
     <Compile Include="overload.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
