--- a/Raj/Raj/Raj.csproj
+++ b/Raj/Raj/Raj.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animal.cs" />
     <Compile Include="CodeFile1.cs" />
     <Compile Include="Indexer.cs" />
     <Compile Include="overload.cs" />
